--- a/sign-in.html
+++ b/sign-in.html
@@ -1,9 +1,9 @@
 <!DOCTYPE html>
-<html lang="en" class="">
+<html lang="en">
     <head>
         <meta charset="UTF-8" />
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-        <title>Grocery Mart</title>
+        <title>Sign in | Grocery Mart</title>
 
         <!-- favicon -->
         <link
@@ -42,12 +42,12 @@
         <script src="./assets/js/script.js"></script>
     </head>
     <body>
-        <header id="header" class="header"></header>
+        <header id="header"></header>
         <script>
             load("#header", "./template/header.html");
         </script>
 
-        <h1>COntent</h1>
+        <h1>sign in</h1>
 
         <footer id="footer"></footer>
         <script>
