--- a/sign-up.html
+++ b/sign-up.html
@@ -6,29 +6,11 @@
         <title>Sign up | Grocery Mart</title>
 
         <!-- favicon -->
-        <link
-            rel="apple-touch-icon"
-            sizes="76x76"
-            href="./assets/favicon/apple-touch-icon.png"
-        />
-        <link
-            rel="icon"
-            type="image/png"
-            sizes="32x32"
-            href="./assets/favicon/favicon-32x32.png"
-        />
-        <link
-            rel="icon"
-            type="image/png"
-            sizes="16x16"
-            href="./assets/favicon/favicon-16x16.png"
-        />
+        <link rel="apple-touch-icon" sizes="76x76" href="./assets/favicon/apple-touch-icon.png" />
+        <link rel="icon" type="image/png" sizes="32x32" href="./assets/favicon/favicon-32x32.png" />
+        <link rel="icon" type="image/png" sizes="16x16" href="./assets/favicon/favicon-16x16.png" />
         <link rel="manifest" href="./assets/favicon/site.webmanifest" />
-        <link
-            rel="mask-icon"
-            href="./assets/favicon/safari-pinned-tab.svg"
-            color="#5bbad5"
-        />
+        <link rel="mask-icon" href="./assets/favicon/safari-pinned-tab.svg" color="#5bbad5" />
         <meta name="msapplication-TileColor" content="#da532c" />
         <meta name="theme-color" content="#ffffff" />
 
@@ -42,16 +24,72 @@
         <script src="./assets/js/script.js"></script>
     </head>
     <body>
-        <header id="header"></header>
-        <script>
-            load("#header", "./templates/header.html");
-        </script>
+        <main class="auth">
+            <!-- auth intro -->
+            <div class="auth__intro">
+                <img src="./assets/img/auth/intro.svg" alt="" class="auth__intro-img" />
+                <p class="auth__intro-text">
+                    The best of luxury brand values, high quality products, and innovative services
+                </p>
+            </div>
 
-        <h1>sign up</h1>
+            <!-- auth content -->
+            <div class="auth__content">
+                <div class="auth__content-inner">
+                    <!-- logo -->
+                    <a href="./" class="logo">
+                        <img src="./assets/icons/logo.svg" alt="grocerymart" class="logo__icon" />
+                        <h1 class="logo__title">grocerymart</h1>
+                    </a>
 
-        <footer id="footer"></footer>
-        <script>
-            load("#footer", "./templates/footer.html");
-        </script>
+                    <h1 class="auth__heading">Sign Up</h1>
+                    <p class="auth__desc">Let’s create your account and Shop like a pro and save money.</p>
+                    <form action="" class="form auth__form">
+                        <div class="form__group">
+                            <div class="form__text-input">
+                                <input type="email" name="" id="" placeholder="Email" class="form__input" />
+                                <img src="./assets/icons/message.svg" alt="" class="form__icon" />
+                            </div>
+                        </div>
+                        <div class="form__group">
+                            <div class="form__text-input">
+                                <input type="password" name="" id="" placeholder="Password" class="form__input" />
+                                <img src="./assets/icons/lock.svg" alt="" class="form__icon" />
+                            </div>
+                        </div>
+                        <div class="form__group">
+                            <div class="form__text-input">
+                                <input
+                                    type="password"
+                                    name=""
+                                    id=""
+                                    placeholder="Confirm Password"
+                                    class="form__input"
+                                />
+                                <img src="./assets/icons/lock.svg" alt="" class="form" />
+                            </div>
+                        </div>
+                        <div class="form__group form__group--inline">
+                            <label class="form__checkbox">
+                                <input type="checkbox" class="form__checkbox-input" hidden />
+                                <span class="form__checkbox-label">Set as default card</span>
+                            </label>
+                        </div>
+
+                        <div class="form__group auth__btn-group">
+                            <button class="btn btn--primary auth__btn">Sign Up</button>
+                            <button class="btn btn--outline auth__btn btn--no-margin">
+                                <img src="./assets/icons/google.svg" alt="" class="auth__btn-icon" />
+                                Sign in with Gmail
+                            </button>
+                        </div>
+                    </form>
+                    <p class="auth__text">
+                        You have an account yet?
+                        <a href="./sign-in.html" class="auth__link">Sign In</a>
+                    </p>
+                </div>
+            </div>
+        </main>
     </body>
 </html>
