--- a/new-password.html
+++ b/new-password.html
@@ -3,7 +3,7 @@
     <head>
         <meta charset="UTF-8" />
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-        <title>Sign in | Grocery Mart</title>
+        <title>Create Password | Grocery Mart</title>
 
         <!-- favicon -->
         <link rel="apple-touch-icon" sizes="76x76" href="./assets/favicon/apple-touch-icon.png" />
@@ -27,10 +27,7 @@
         <main class="auth">
             <!-- auth intro -->
             <div class="auth__intro d-md-none">
-                <img src="./assets/img/auth/intro.svg" alt="" class="auth__intro-img" />
-                <p class="auth__intro-text">
-                    The best of luxury brand values, high quality products, and innovative services
-                </p>
+                <img src="./assets/img/auth/forgot-password.png" alt="" class="auth__intro-img" />
             </div>
 
             <!-- auth content -->
@@ -42,27 +39,19 @@
                         <h2 class="logo__title">grocerymart</h2>
                     </a>
 
-                    <h1 class="auth__heading">Hello Again!</h1>
-                    <p class="auth__desc">
-                        Welcome back to sign in. As a returning customer, you have access to your previously saved all
-                        information.
-                    </p>
-                    <form action="./index-logined.html" class="form auth__form">
-                        <div class="form__group">
-                            <div class="form__text-input">
-                                <input type="email" name="" id="" placeholder="Email" class="form__input" required />
-                                <img src="./assets/icons/message.svg" alt="" class="form__icon" />
-                                <img src="./assets/icons/form-error.svg" alt="" class="form__icon-error" />
-                            </div>
-                            <p class="form__error">Email is not in correct format</p>
-                        </div>
+                    <h1 class="auth__heading">Reset your password</h1>
+                    <p class="auth__desc">At least 6 characters, with uppercase and lowercase letter.</p>
+                    <div class="message message--success auth__message d-none">
+                        We have e-mailed your password reset link
+                    </div>
+                    <form action="./sign-in.html" class="form auth__form auth__form-forgot">
                         <div class="form__group">
                             <div class="form__text-input">
                                 <input
                                     type="password"
                                     name=""
                                     id=""
-                                    placeholder="Password"
+                                    placeholder="New Password"
                                     class="form__input"
                                     required
                                     minlength="6"
@@ -72,27 +61,25 @@
                             </div>
                             <p class="form__error">Password must be at least 6 characters</p>
                         </div>
-
-                        <div class="form__group form__group--inline">
-                            <label class="form__checkbox">
-                                <input type="checkbox" class="form__checkbox-input" hidden />
-                                <span class="form__checkbox-label">Set as default card</span>
-                            </label>
-                            <a href="./forgot-password.html" class="auth__link form__pull-right">Recovery Password</a>
+                        <div class="form__group">
+                            <div class="form__text-input">
+                                <input
+                                    type="password"
+                                    name=""
+                                    id=""
+                                    placeholder="Confirm New Password"
+                                    class="form__input"
+                                    required
+                                />
+                                <img src="./assets/icons/lock.svg" alt="" class="form" />
+                                <img src="./assets/icons/form-error.svg" alt="" class="form__icon-error" />
+                            </div>
+                            <p class="form__error">Password must be at least 6 characters</p>
                         </div>
-
                         <div class="form__group auth__btn-group">
-                            <button class="btn btn--primary auth__btn form__submit-btn">Sign Up</button>
-                            <button class="btn btn--outline auth__btn auth__btn--google btn--no-margin">
-                                <img src="./assets/icons/google.svg" alt="" class="icon auth__btn-icon" />
-                                Sign in with Gmail
-                            </button>
+                            <button class="btn btn--primary auth__btn form__submit-btn">Reset Password</button>
                         </div>
                     </form>
-                    <p class="auth__text">
-                        Don’t have an account yet?
-                        <a href="./sign-up.html" class="auth__link auth__text-link">Sign Up</a>
-                    </p>
                 </div>
             </div>
         </main>
