--- a/sign-up.html
+++ b/sign-up.html
@@ -27,14 +27,22 @@
         <main class="auth">
             <!-- auth intro -->
             <div class="auth__intro">
+                <!-- logo -->
+                <a href="./" class="logo auth__intro-logo d-none d-md-flex">
+                    <img src="./assets/icons/logo.svg" alt="grocerymart" class="logo__icon" />
+                    <h1 class="logo__title">grocerymart</h1>
+                </a>
                 <img src="./assets/img/auth/intro.svg" alt="" class="auth__intro-img" />
                 <p class="auth__intro-text">
                     The best of luxury brand values, high quality products, and innovative services
                 </p>
+                <button class="auth__intro-next d-none d-md-flex js-toggle" toggle-target="#auth__content">
+                    <img src="./assets/img/auth/intro-logo.svg" alt="" />
+                </button>
             </div>
 
             <!-- auth content -->
-            <div class="auth__content">
+            <div id="auth__content" class="auth__content hide">
                 <div class="auth__content-inner">
                     <!-- logo -->
                     <a href="./" class="logo">
@@ -44,18 +52,30 @@
 
                     <h1 class="auth__heading">Sign Up</h1>
                     <p class="auth__desc">Let’s create your account and Shop like a pro and save money.</p>
-                    <form action="" class="form auth__form">
+                    <form action="./index-logined.html" class="form auth__form">
                         <div class="form__group">
                             <div class="form__text-input">
-                                <input type="email" name="" id="" placeholder="Email" class="form__input" />
+                                <input type="email" name="" id="" placeholder="Email" class="form__input" required />
                                 <img src="./assets/icons/message.svg" alt="" class="form__icon" />
+                                <img src="./assets/icons/form-error.svg" alt="" class="form__icon-error" />
                             </div>
+                            <p class="form__error">Email is not in correct format</p>
                         </div>
                         <div class="form__group">
                             <div class="form__text-input">
-                                <input type="password" name="" id="" placeholder="Password" class="form__input" />
+                                <input
+                                    type="password"
+                                    name=""
+                                    id=""
+                                    placeholder="Password"
+                                    class="form__input"
+                                    required
+                                    minlength="6"
+                                />
                                 <img src="./assets/icons/lock.svg" alt="" class="form__icon" />
+                                <img src="./assets/icons/form-error.svg" alt="" class="form__icon-error" />
                             </div>
+                            <p class="form__error">Password must be at least 6 characters</p>
                         </div>
                         <div class="form__group">
                             <div class="form__text-input">
@@ -65,9 +85,12 @@
                                     id=""
                                     placeholder="Confirm Password"
                                     class="form__input"
+                                    required
                                 />
                                 <img src="./assets/icons/lock.svg" alt="" class="form" />
+                                <img src="./assets/icons/form-error.svg" alt="" class="form__icon-error" />
                             </div>
+                            <p class="form__error">Password must be at least 6 characters</p>
                         </div>
                         <div class="form__group form__group--inline">
                             <label class="form__checkbox">
@@ -77,19 +100,22 @@
                         </div>
 
                         <div class="form__group auth__btn-group">
-                            <button class="btn btn--primary auth__btn">Sign Up</button>
-                            <button class="btn btn--outline auth__btn btn--no-margin">
-                                <img src="./assets/icons/google.svg" alt="" class="auth__btn-icon" />
+                            <button class="btn btn--primary auth__btn form__submit-btn">Sign Up</button>
+                            <button class="btn btn--outline auth__btn auth__btn--google btn--no-margin">
+                                <img src="./assets/icons/google.svg" alt="" class="icon auth__btn-icon" />
                                 Sign in with Gmail
                             </button>
                         </div>
                     </form>
                     <p class="auth__text">
                         You have an account yet?
-                        <a href="./sign-in.html" class="auth__link">Sign In</a>
+                        <a href="./sign-in.html" class="auth__link auth__text-link">Sign In</a>
                     </p>
                 </div>
             </div>
         </main>
+        <script>
+            window.dispatchEvent(new Event("template-loaded"));
+        </script>
     </body>
 </html>
