add shippng, payment

--- a/index.html
+++ b/index.html
@@ -135,7 +135,7 @@
                                         <div class="filter__form-group filter__form-group--inline">
                                             <div>
                                                 <label for="" class="form__label form__label--small"> Minimum </label>
-                                                <div class="form__text-input form__text-input--small">
+                                                <div class="filter__form-text-input filter__form-text-input--small">
                                                     <input
                                                         type="text"
                                                         name=""
@@ -147,7 +147,7 @@
                                             </div>
                                             <div>
                                                 <label for="" class="form__label form__label--small"> Maximum </label>
-                                                <div class="form__text-input form__text-input--small">
+                                                <div class="filter__form-text-input filter__form-text-input--small">
                                                     <input
                                                         type="text"
                                                         name=""
@@ -199,7 +199,7 @@
                                     <div class="filter-col">
                                         <label for="" class="form__label">Brand</label>
                                         <div class="filter__form-group">
-                                            <div class="form__text-input">
+                                            <div class="filter__form-text-input">
                                                 <input
                                                     type="text"
                                                     name=""
