--- a/checkout.html
+++ b/checkout.html
@@ -74,7 +74,7 @@
                 <div class="checkout__container">
                     <div class="row gy-xl-3">
                         <div class="col-8 col-xl-12">
-                            <div class="cart-info">
+                            <div class="page-container">
                                 <div class="cart-info__list">
                                     <!-- item 1 -->
                                     <article class="cart-item">
@@ -329,7 +329,7 @@
                             </div>
                         </div>
                         <div class="col-4 col-xl-12">
-                            <div class="cart-info">
+                            <div class="page-container">
                                 <div class="cart-info__row">
                                     <span>Subtotal <span class="cart-info__sub-label">(items)</span></span>
                                     <span>3</span>
@@ -351,7 +351,7 @@
                                     >Continue to checkout</a
                                 >
                             </div>
-                            <div class="cart-info">
+                            <div class="page-container">
                                 <a href="#!">
                                     <article class="gift-item">
                                         <div class="gift-item__wrap-icon">
