--- a/payment.html
+++ b/payment.html
@@ -86,7 +86,7 @@
                 <div class="checkout__container">
                     <div class="row gy-xl-3">
                         <div class="col-8 col-lg-12">
-                            <div class="cart-info">
+                            <div class="page-container">
                                 <div class="cart-info__top">
                                     <h2 class="cart-info__heading cart-info__heading--lv2">
                                         1. Shipping, arrives between Mon, May 16—Tue, May 24
@@ -113,7 +113,7 @@
                                     <a href="./checkout.html" class="payment-item__link">View details</a>
                                 </div>
                             </div>
-                            <div class="cart-info">
+                            <div class="page-container">
                                 <h2 class="cart-info__heading cart-info__heading--lv2">2. Shipping method</h2>
                                 <div class="cart-info__separate"></div>
 
@@ -173,7 +173,7 @@
                             </div>
                         </div>
                         <div class="col-4 col-lg-12">
-                            <div class="cart-info">
+                            <div class="page-container">
                                 <h2 class="cart-info__heading cart-info__heading--lv2">Payment Details</h2>
                                 <p class="cart-info__desc">
                                     Complete your purchase item by providing your payment details order.
