--- a/shipping.html
+++ b/shipping.html
@@ -80,7 +80,7 @@
                 <div class="checkout__container">
                     <div class="row gy-xl-3">
                         <div class="col-8 col-xl-12">
-                            <div class="cart-info">
+                            <div class="page-container">
                                 <h1 class="cart-info__heading">1. Shipping, arrives between Mon, May 16—Tue, May 24</h1>
                                 <div class="cart-info__separate"></div>
 
@@ -436,7 +436,7 @@
                             </div>
                         </div>
                         <div class="col-4 col-xl-12">
-                            <div class="cart-info">
+                            <div class="page-container">
                                 <div class="cart-info__row">
                                     <span>Subtotal <span class="cart-info__sub-label">(items)</span></span>
                                     <span>3</span>
@@ -458,7 +458,7 @@
                                     >Continue to checkout</a
                                 >
                             </div>
-                            <div class="cart-info">
+                            <div class="page-container">
                                 <a href="#!">
                                     <article class="gift-item">
                                         <div class="gift-item__wrap-icon">
