--- a/index.html
+++ b/index.html
@@ -241,7 +241,7 @@
                         </div>
                     </div>
                 </div>
-                <div class="row row-cols-4 row-cols-lg-2 row-cols-sm-1 g-3">
+                <div class="row row-cols-5 row-cols-lg-2 row-cols-sm-1 g-3">
                     <div class="col">
                         <article class="product-card">
                             <div class="product-card__img-wrap">
@@ -338,6 +338,29 @@
                         <article class="product-card">
                             <div class="product-card__img-wrap">
                                 <a href="./product-detail.html">
+                                    <img src="./assets/img/product/item-4.png" alt="" class="product-card__thumb" />
+                                </a>
+                                <button class="like-btn product-card__like-btn">
+                                    <img src="./assets/icons/heart.svg" alt="" class="icon like-btn__icon" />
+                                    <img src="./assets/icons/heart-red.svg" alt="" class="like-btn__icon--liked" />
+                                </button>
+                            </div>
+                            <h3 class="product-card__title">
+                                <a href="./product-detail.html">Qualità Oro Mountain Grown - Espresso Coffee Beans</a>
+                            </h3>
+                            <p class="product-card__brand">Lavazza</p>
+                            <div class="product-card__row">
+                                <p class="product-card__price">$38.65</p>
+                                <img src="./assets/icons/star.svg" alt="" class="product-card__star" />
+                                <span class="product-card__score">4.4</span>
+                            </div>
+                        </article>
+                    </div>
+                    <!-- 6 -->
+                    <div class="col">
+                        <article class="product-card">
+                            <div class="product-card__img-wrap">
+                                <a href="./product-detail.html">
                                     <img src="./assets/img/product/item-2.png" alt="" class="product-card__thumb" />
                                 </a>
                                 <button class="like-btn product-card__like-btn">
@@ -356,7 +379,7 @@
                             </div>
                         </article>
                     </div>
-                    <!-- 6 -->
+                    <!-- 7 -->
                     <div class="col">
                         <article class="product-card">
                             <div class="product-card__img-wrap">
@@ -379,7 +402,7 @@
                             </div>
                         </article>
                     </div>
-                    <!-- 7 -->
+                    <!-- 8 -->
                     <div class="col">
                         <article class="product-card">
                             <div class="product-card__img-wrap">
@@ -402,7 +425,30 @@
                             </div>
                         </article>
                     </div>
-                    <!-- 8 -->
+                    <!-- 9 -->
+                    <div class="col">
+                        <article class="product-card">
+                            <div class="product-card__img-wrap">
+                                <a href="./product-detail.html">
+                                    <img src="./assets/img/product/item-3.png" alt="" class="product-card__thumb" />
+                                </a>
+                                <button class="like-btn like-btn--red product-card__like-btn">
+                                    <img src="./assets/icons/heart.svg" alt="" class="icon like-btn__icon" />
+                                    <img src="./assets/icons/heart-red.svg" alt="" class="like-btn__icon--liked" />
+                                </button>
+                            </div>
+                            <h3 class="product-card__title">
+                                <a href="./product-detail.html">Lavazza - Caffè Espresso Black Tin - Ground coffee</a>
+                            </h3>
+                            <p class="product-card__brand">welikecoffee</p>
+                            <div class="product-card__row">
+                                <p class="product-card__price">$99.99</p>
+                                <img src="./assets/icons/star.svg" alt="" class="product-card__star" />
+                                <span class="product-card__score">5.0</span>
+                            </div>
+                        </article>
+                    </div>
+                    <!-- 10 -->
                     <div class="col">
                         <article class="product-card">
                             <div class="product-card__img-wrap">
